fixed overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -398,7 +398,14 @@ body {
 }
 
 
+.container {
+  display: block;
+}
 
+.interactive-image-container,
+.standing-video-container {
+  flex: 2;
+}
 
 /*ABOUT ME*/
 
